Update admin controllers and begin work on functional routes and views

--- a/app/views/staff_members/index.html.erb
+++ b/app/views/staff_members/index.html.erb
@@ -1,1 +1,10 @@
-<h1> Admin staff members index </h1>
+<h1>Update Staff Page</h1>
+
+<table>
+<tr><td><div contenteditable>I'm editable</div></td>
+<td><div contenteditable>I'm also editable</div></td></tr>
+<tr><td>I'm not editable</td></tr>
+</table>
+
+<%= render 'current_staff_table' unless @staff_members.empty? %>
+<%= render 'form' %>
