Update active field and validations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <% if @errors%>
+      <ul>
+      <%= @errors.each do |e| %>
+        <li><%= e %></li>
+      </ul>
+      <% end %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
