--- a/app/views/staff_members/edit.html.erb
+++ b/app/views/staff_members/edit.html.erb
@@ -12,6 +12,6 @@
   <%=f.file_field :image %>
   <br>
   <%=f.label 'Current Employee?' %>
-  <%=f.check_box(:active?) %>
+  <%=f.check_box(:active) %>
   <%=f.submit "Edit Staff Member" %>
 <% end %>
