--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,1 +1,5 @@
-<h1> Admin results index </h1>
+<h1> Update Results </h1>
+
+<%= render 'current_results_table' unless @results.empty? %>
+<br>
+<%= link_to "Add New Result", new_result_path %>
