--- a/app/views/staff_members/_staff_member_compact.html.erb
+++ b/app/views/staff_members/_staff_member_compact.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%=staff_member.name%></td>
   <td><%=staff_member.bio%></td>
-  <td><%=staff_member.active?%></td>
+  <td><%=staff_member.active%></td>
   <td><%= link_to "Edit", edit_staff_member_path(staff_member) %></td>
-  <td><%= link_to "Delete", staff_member, method: :delete %>
+  <td><%= link_to "Delete", staff_member, method: :delete %></td>
 </tr>
