--- a/app/views/class_descriptions/index.html.erb
+++ b/app/views/class_descriptions/index.html.erb
@@ -1,1 +1,5 @@
-<h1> Admin class description index </h1>
+<h1> Update Class Descriptions </h1>
+
+<%= render 'current_descriptions_table' unless @class_descriptions.empty? %>
+<br>
+<%= link_to "Add New Description", new_class_description_path %>
