--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+    <% if admin_signed_in? %>
+      <nav>
+        <ul>
+          <li><%= link_to "News Updates", admin_news_path %></li>
+          <li><%= link_to "Class Descriptions", admin_classes_path %></li>
+          <li><%= link_to "Schedule", admin_schedule_path %></li>
+          <li><%= link_to "Results", admin_results_path %></li>
+          <li><%= link_to "Staff", admin_staff_path %></li>
+          <li><%= link_to "Edit Profile", edit_admin_registration_path(current_admin) %></li>
+          <li><%= link_to "Logout", destroy_admin_session_path(current_admin), method: :delete, data: {confirm: "Are you sure you want to logout?"}%></li>
+        </ul>
+      </nav>
+    <% end %> 
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if @errors%>
