--- a/app/views/scheduled_classes/_scheduled_class_compact.html.erb
+++ b/app/views/scheduled_classes/_scheduled_class_compact.html.erb
@@ -6,5 +6,5 @@
   <td><%=scheduled_class.instructor%></td>
   <td><%=scheduled_class.active%></td>
   <td><%= link_to "Edit", edit_scheduled_class_path(scheduled_class) %></td>
-  <td><%= link_to "Delete", scheduled_class, method: :delete %></td>
+  <td><%= link_to "Delete", scheduled_class, method: :delete, data: {confirm: "Are you sure you want to delete this scheduled class?"} %></td>
 </tr>
