Begin implementing bootstrap styles to admin dashboard

--- a/app/views/news_updates/_current_news_table.html.erb
+++ b/app/views/news_updates/_current_news_table.html.erb
@@ -1,12 +1,14 @@
-<table>
-  <tr>
-    <th> Title </th>
-    <th> Description </th>
-    <th> Date </th>
-    <th> Current News </th>
-    <th> Edit News Update </th>
-    <th> Delete News Update </th>
-  </tr>
-  <%= render partial: 'news_update_compact', collection: @news_updates, as: :news_update %>
-  
-</table>
+<div class="container">
+  <table class="table table-bordered">
+    <tr>
+      <th> Title </th>
+      <th> Description </th>
+      <th> Date </th>
+      <th> Current News </th>
+      <th> Edit News Update </th>
+      <th> Delete News Update </th>
+    </tr>
+    <%= render partial: 'news_update_compact', collection: @news_updates, as: :news_update %>
+
+  </table>
+</div>
