--- a/app/views/class_descriptions/_current_descriptions_table.html.erb
+++ b/app/views/class_descriptions/_current_descriptions_table.html.erb
@@ -1,11 +1,13 @@
-<table> 
-  <tr>
-    <th> Classification </th>
-    <th> Class Title </th>
-    <th> Description </th>
-    <th> Fees </th>
-    <th> Edit Class Description </th>
-    <th> Delete Class Description </th>
-  </tr>
-  <%= render partial: 'class_description_compact', collection: @class_descriptions, as: :class_description %>
-</table>
+<div class="container">
+  <table class="table"> 
+    <tr>
+      <th> Classification </th>
+      <th> Class Title </th>
+      <th> Description </th>
+      <th> Fees </th>
+      <th> Edit Class Description </th>
+      <th> Delete Class Description </th>
+    </tr>
+    <%= render partial: 'class_description_compact', collection: @class_descriptions, as: :class_description %>
+  </table>
+</div>
