--- a/app/views/news_updates/new.html.erb
+++ b/app/views/news_updates/new.html.erb
@@ -1,16 +1,26 @@
-<h2> Add News Update: </h2>
-<%= form_for @news_update, url: {action: "create"} do |f| %>
-  <%=f.label 'Title:' %>
-  <%=f.text_field :title %>
-  <br>
-  <%=f.label 'Description:' %>
-  <%=f.text_area :description %>
-  <br>
-  <%=f.label 'Date (if applicable):' %>
-  <%=f.date_field :date %>
-  <br>
-  <%=f.label 'Add Image:' %>
-  <%=f.file_field :image %>
-  <br>
-  <%=f.submit "Add News Update" %>
-<% end %>
+<div class="container">
+  <h2> Add News Update: </h2>
+  <%= form_for @news_update, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Title:' %>
+      <br>
+      <%=f.text_field :title %>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Description:' %>
+      <br>
+      <%=f.text_area :description %>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Date (if applicable):' %>
+      <br>
+      <%=f.date_field :date %>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Add Image:' %>
+      <br>
+      <%=f.file_field :image %>
+    </div>
+    <%=f.submit "Add News Update" %>
+  <% end %>
+</div>
