--- a/app/views/results/_current_results_table.html.erb
+++ b/app/views/results/_current_results_table.html.erb
@@ -1,11 +1,13 @@
-<table>
-  <tr>
-    <th> Year </th>
-    <th> Level </th>
-    <th> Description </th>
-    <th> Edit Result </th>
-    <th> Delete Result </th>
-  </tr>
-  <%= render partial: 'result_compact', collection: @results, as: :result %>
+<div class="container">
+  <table class="table">
+    <tr>
+      <th> Year </th>
+      <th> Level </th>
+      <th> Description </th>
+      <th> Edit Result </th>
+      <th> Delete Result </th>
+    </tr>
+    <%= render partial: 'result_compact', collection: @results, as: :result %>
 
-</table>
+  </table>
+</div>
