Add bootstrap styling to news update views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,10 +43,10 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if @errors%>
-      <div>
-        <ul>
+      <div class="alert alert-danger" role="alert">
+        <ul class="list-unstyled">
         <% @errors.each do |e| %>
-          <li><%= e %></li>
+          <li><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><%= e %></li>
         <% end %>
         </ul>
       </div>
