--- a/app/views/news_updates/_news_update_compact.html.erb
+++ b/app/views/news_updates/_news_update_compact.html.erb
@@ -2,7 +2,11 @@
   <td><%=news_update.title%></td>
   <td><%=news_update.description%></td>
   <td><%=news_update.date ? news_update.date.strftime("%b %d, %Y") : " "%></td>
-  <td><%=news_update.active%></td>
-  <td><%= link_to "Edit", edit_news_update_path(news_update) %></td>
-  <td><%= link_to "Delete", news_update, method: :delete, data: {confirm: "Are you sure you want to delete this news update?"}%></td>
+  <% if news_update.active %>
+    <td><span class="glyphicon glyphicon-ok" style="color:green"></span></td>
+  <% else %>
+    <td><span class="glyphicon glyphicon-remove" style="color:grey"></span></td>
+  <% end %>
+  <td><%= link_to "Edit", edit_news_update_path(news_update), :class => "btn btn-info btn-sm" %></td>
+  <td><%= link_to "Delete", news_update, method: :delete, data: {confirm: "Are you sure you want to delete this news update?"}, :class => "btn btn-danger btn-sm"%></td>
 </tr>
