--- a/app/views/news_updates/edit.html.erb
+++ b/app/views/news_updates/edit.html.erb
@@ -1,21 +1,44 @@
-<h2> Edit News Update: </h2>
-<%= form_for @news_update, url: news_update_path(@news_update), method: 'put' do |f| %>
-  <%=f.label 'Title:' %>
-  <%=f.text_field :title %>
-  <br>
-  <%=f.label 'Description:' %>
-  <%=f.text_area :description %>
-  <br>
-  <%=f.label 'Date (if applicable):' %>
-  <%=f.date_field :date %>
-  <br>
-  <% if @news_update.image.exists? %>
-    <%= image_tag @news_update.image.url(:thumb) %>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Edit News Update: </h2>
+  </div>
+  <%= form_for @news_update, url: news_update_path(@news_update), method: 'put', html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Title:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :title, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Description:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_area :description, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Date (if applicable):', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.date_field :date, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <% if @news_update.image.exists? %>
+        <%= image_tag @news_update.image.url(:thumb), :class => "col-sm-2" %>
+      <% end %>
+      <div class="col-sm-10">
+        <%=f.file_field :image %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Current News Story?', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-2">
+        <%=f.check_box(:active) %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Edit News Update", :class => "btn btn-primary" %>
+      </div>
+    </div>
   <% end %>
-  <%=f.file_field :image %>
-  <br>
-  <%=f.label 'Current News Story?' %>
-  <%=f.check_box(:active) %>
-  <br>
-  <%=f.submit "Edit News Update" %>
-<% end %>
+</div>
