--- a/app/views/news_updates/new.html.erb
+++ b/app/views/news_updates/new.html.erb
@@ -1,26 +1,36 @@
 <div class="container">
-  <h2> Add News Update: </h2>
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Add News Update: </h2>
+  </div>
   <%= form_for @news_update, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
     <div class="form-group">
-      <%=f.label 'Title:' %>
-      <br>
-      <%=f.text_field :title %>
+      <%=f.label 'Title:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :title, :class =>"form-control" %>
+      </div>
     </div>
     <div class="form-group">
-      <%=f.label 'Description:' %>
-      <br>
-      <%=f.text_area :description %>
+      <%=f.label 'Description:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_area :description, :class =>"form-control" %>
+      </div>
     </div>
     <div class="form-group">
-      <%=f.label 'Date (if applicable):' %>
-      <br>
-      <%=f.date_field :date %>
+      <%=f.label 'Date (if applicable):', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.date_field :date, :class =>"form-control" %>
+      </div>
     </div>
     <div class="form-group">
-      <%=f.label 'Add Image:' %>
-      <br>
-      <%=f.file_field :image %>
+      <%=f.label 'Add Image:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.file_field :image %>
+      </div>
     </div>
-    <%=f.submit "Add News Update" %>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Add News Update", :class => "btn btn-primary" %>
+      </div>
+    </div>
   <% end %>
 </div>
