--- a/app/views/news_updates/index.html.erb
+++ b/app/views/news_updates/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center"> News Updates </h1>
+  <h1 class="text-center"> News Update Dashboard </h1>
 </div>
 
 <%= render 'current_news_table' unless @news_updates.empty? %>
