--- a/app/views/staff_members/_current_staff_table.html.erb
+++ b/app/views/staff_members/_current_staff_table.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <table class="table">
+  <table class="table table-bordered">
     <tr>
       <th> Name </th>
       <th> Bio </th>
