--- a/app/views/class_descriptions/_class_description_compact.html.erb
+++ b/app/views/class_descriptions/_class_description_compact.html.erb
@@ -3,6 +3,6 @@
   <td><%=class_description.title%></td>
   <td><%=class_description.description%></td>
   <td><%=class_description.fees%></td>
-  <td><%= link_to "Edit", edit_class_description_path(class_description) %></td>
-  <td><%= link_to "Delete", class_description, method: :delete, data: {confirm: "Are you sure you want to delete this class description?"} %></td>
+  <td><%= link_to "Edit", edit_class_description_path(class_description), :class => "btn btn-info btn-sm" %></td>
+  <td><%= link_to "Delete", class_description, method: :delete, data: {confirm: "Are you sure you want to delete this class description?"}, :class => "btn btn-danger btn-sm" %></td>
 </tr>
