--- a/app/views/results/_current_results_table.html.erb
+++ b/app/views/results/_current_results_table.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <table class="table">
+  <table class="table table-bordered">
     <tr>
       <th> Year </th>
       <th> Level </th>
