--- a/app/views/results/edit.html.erb
+++ b/app/views/results/edit.html.erb
@@ -1,18 +1,38 @@
-<h2> Edit Result: </h2>
-<%= form_for @result, url: result_path(@result), method: 'put' do |f| %>
-  <%=f.label 'Year:' %>
-  <%=f.select :year, (Time.current.year - 10)..(Time.current.year + 1) %>
-  <br>
-  <%=f.label 'Level:' %>
-  <%=f.text_field :level %>
-  <br>
-  <%=f.label 'Description:' %>
-  <%=f.text_area :description %>
-  <br> 
-  <% if @result.image.exists? %>
-    <%= image_tag @result.image.url(:thumb) %>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Edit Result: </h2>
+  </div>
+  <%= form_for @result, url: result_path(@result), method: 'put', html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Year:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.select :year, (Time.current.year - 10)..(Time.current.year + 1), :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Level:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :level, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Description:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_area :description, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <% if @result.image.exists? %>
+        <%= image_tag @result.image.url(:thumb), :class => "col-sm-2" %>
+      <% end %>
+      <div class="col-sm-10">
+        <%=f.file_field :image %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Edit Result", :class => "btn btn-primary" %>
+      </div>
+    </div>
   <% end %>
-  <%=f.file_field :image %>
-  <br>
-  <%=f.submit "Edit Result" %>
-<% end %>
+</div>
