--- a/app/views/results/new.html.erb
+++ b/app/views/results/new.html.erb
@@ -1,16 +1,36 @@
-<h2> Add New Result: </h2>
-<%= form_for @result, url: {action: "create"} do |f| %>
-  <%=f.label 'Year:' %>
-  <%=f.select :year, (Time.current.year - 10)..(Time.current.year + 1) %>
-  <br>
-  <%=f.label 'Level:' %>
-  <%=f.text_field :level %>
-  <br>
-  <%=f.label 'Description:' %>
-  <%=f.text_area :description %>
-  <br> 
-  <%=f.label 'Add Image:' %>
-  <%=f.file_field :image %>
-  <br>
-  <%=f.submit "Add New Result" %>
-<% end %>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Add New Result: </h2>
+  </div>
+  <%= form_for @result, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Year:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.select :year, (Time.current.year - 10)..(Time.current.year + 1), :class =>"form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Level:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :level, :class =>"form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Description:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_area :description, :class =>"form-control" %>
+      </div>
+    </div>
+    <div class="form-group"> 
+      <%=f.label 'Add Image:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.file_field :image %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Add New Result", :class => "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+</div>
