--- a/app/views/staff_members/_staff_member_compact.html.erb
+++ b/app/views/staff_members/_staff_member_compact.html.erb
@@ -1,7 +1,11 @@
 <tr>
   <td><%=staff_member.name%></td>
   <td><%=staff_member.bio%></td>
-  <td><%=staff_member.active%></td>
-  <td><%= link_to "Edit", edit_staff_member_path(staff_member) %></td>
-  <td><%= link_to "Delete", staff_member, method: :delete, data: {confirm: "Are you sure you want to delete this staff member?"} %></td>
+  <% if staff_member.active %>
+    <td><span class="glyphicon glyphicon-ok" style="color:green"></span></td>
+  <% else %>
+    <td><span class="glyphicon glyphicon-remove" style="color:grey"></span></td>
+  <% end %>
+  <td><%= link_to "Edit", edit_staff_member_path(staff_member), :class => "btn btn-info btn-sm" %></td>
+  <td><%= link_to "Delete", staff_member, method: :delete, data: {confirm: "Are you sure you want to delete this staff member?"}, :class => "btn btn-danger btn-sm" %></td>
 </tr>
