--- a/app/views/staff_members/new.html.erb
+++ b/app/views/staff_members/new.html.erb
@@ -1,13 +1,31 @@
-<h2> Add New Staff Member: </h2>
-<%= form_for @staff_member, url: {action: "create"} do |f| %>
-  <%=f.label 'Name:' %>
-  <%=f.text_field :name %>
-  <br>
-  <%=f.label 'Bio:' %>
-  <%=f.text_area :bio %>
-  <br>
-  <%=f.label 'Add Image:' %>
-  <%=f.file_field :image %>
-  <br>
-  <%=f.submit "Add Staff Member" %>
-<% end %>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Add New Staff Member: </h2>
+  </div>
+  <%= form_for @staff_member, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Name:', :class => "col-sm-2 control-label"  %>
+      <div class="col-sm-10">
+        <%=f.text_field :name, :class =>"form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Bio:', :class => "col-sm-2 control-label"  %>
+      <div class="col-sm-10">
+        <%=f.text_area :bio, :class =>"form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Add Image:', :class => "col-sm-2 control-label"  %>
+      <div class="col-sm-10">
+        <%=f.file_field :image %>
+      </div>
+    </div>
+    <div class="form-group">  
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Add Staff Member", :class => "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
