--- a/app/views/staff_members/_staff_member_compact.html.erb
+++ b/app/views/staff_members/_staff_member_compact.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%=staff_member.name%></td>
-  <td><%=staff_member.bio%></td>
+  <td><%=truncate(staff_member.bio, length: 50)%></td>
   <% if staff_member.active %>
     <td><span class="glyphicon glyphicon-ok" style="color:green"></span></td>
   <% else %>
