--- a/app/views/staff_members/index.html.erb
+++ b/app/views/staff_members/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center">Update Staff Members</h1>
+  <h1 class="text-center">Staff Member Dashboard</h1>
 </div>
 
 <%= render 'current_staff_table' unless @staff_members.empty? %>
