--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <li><%= link_to "Results", admin_results_path %></li>
           <li><%= link_to "Staff", admin_staff_path %></li>
           <li><%= link_to "Edit Profile", edit_admin_registration_path(current_admin) %></li>
-          <li><%= link_to "Logout", destroy_admin_session_path(current_admin), method: :delete, data: {confirm: "Are you sure you want to logout?"}%></li>
+          <li><%= link_to "Logout", destroy_admin_session_path, method: :delete, data: {confirm: "Are you sure you want to logout?"}%></li>
         </ul>
       </nav>
     <% end %> 
