--- a/app/views/results/_result_compact.html.erb
+++ b/app/views/results/_result_compact.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%=result.year.strftime("%Y")%></td>
   <td><%=result.level%></td>
-  <td><%=result.description%></td>
+  <td><%=truncate(result.description, length: 50)%></td>
   <td><%= link_to "Edit", edit_result_path(result), :class => "btn btn-info btn-sm" %></td>
   <td><%= link_to "Delete", result, method: :delete, data: {confirm: "Are you sure you want to delete this result?"}, :class => "btn btn-danger btn-sm" %></td>
 </tr>
