--- a/app/views/scheduled_classes/_current_classes_table.html.erb
+++ b/app/views/scheduled_classes/_current_classes_table.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <table class="table">
+  <table class="table table-bordered">
     <tr>
       <th> Class Name </th>
       <th> Day </th>
