--- a/app/views/scheduled_classes/edit.html.erb
+++ b/app/views/scheduled_classes/edit.html.erb
@@ -1,22 +1,48 @@
-<h2> Edit Class: </h2>
-<%= form_for @scheduled_class, url: scheduled_class_path(@scheduled_class), method: 'put' do |f| %>
-  <%=f.label 'Day:' %>
-  <%=f.select(:day, options_for_select(["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]))%>
-  <br>
-  <%=f.label 'Time:' %>
-  <%=f.time_field :time %>
-  <br>
-  <%=f.label 'Name of Class:' %>
-  <%=f.text_field :name %>
-  <br>
-  <%=f.label 'Class Description:' %>
-  <%=f.text_area :about %>
-  <br>
-  <%=f.label 'Instructor:' %>
-  <%=f.text_field :instructor %>
-  <br>
-  <%=f.label 'Active Class?' %>
-  <%=f.check_box(:active) %>
-  <br>
-  <%=f.submit "Edit Class" %>
-<% end %>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Edit Class: </h2>
+  </div>
+  <%= form_for @scheduled_class, url: scheduled_class_path(@scheduled_class), method: 'put', html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'Day:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.select(:day, options_for_select(["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]), :class => "form-control")%>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Time:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.time_field :time, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Name of Class:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :name, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Class Description:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_area :about, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Instructor:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :instructor, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'Active Class?', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-2">
+        <%=f.check_box(:active) %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Edit Class", :class => "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+</div>
