--- a/app/views/scheduled_classes/index.html.erb
+++ b/app/views/scheduled_classes/index.html.erb
@@ -1,5 +1,9 @@
-<h1> Update Class Schedule </h1>
+<div class="container">
+  <h1 class="text-center"> Class Schedule Dashboard </h1>
+</div>
 
 <%= render 'current_classes_table' unless @scheduled_classes.empty? %>
 <br>
-<%= link_to "Add New Class", new_scheduled_class_path %>
+<div class="container text-center">
+  <%= link_to "Add New Class", new_scheduled_class_path, :class => "btn btn-primary btn-lg text-center" %>
+</div>
