--- a/app/views/class_descriptions/edit.html.erb
+++ b/app/views/class_descriptions/edit.html.erb
@@ -7,6 +7,7 @@
       <%=f.label 'Classification:', :class => "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%=f.text_field :classification, :class =>"form-control" %>
+        <p class="help-block">(Primary, Secondary, etc.)</p>
       </div>
     </div>
     <div class="form-group">
