--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,3 @@
-<h1> This is the index page where latest news will be displayed </h1>
+<body style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;">
+  <h1> This is the index page where latest news will be displayed </h1>
+</body>
