--- a/app/views/results/_current_results_table.html.erb
+++ b/app/views/results/_current_results_table.html.erb
@@ -4,8 +4,8 @@
       <th> Year </th>
       <th> Level </th>
       <th> Description </th>
-      <th> Edit Result </th>
-      <th> Delete Result </th>
+      <th class="text-center"> Edit Result </th>
+      <th class="text-center"> Delete Result </th>
     </tr>
     <%= render partial: 'result_compact', collection: @results, as: :result %>
 
