--- a/app/views/scheduled_classes/_current_classes_table.html.erb
+++ b/app/views/scheduled_classes/_current_classes_table.html.erb
@@ -6,9 +6,9 @@
       <th> Time </th>
       <th> Description </th>
       <th> Instructor </th>
-      <th> Active Class </th>
-      <th> Edit Class </th>
-      <th> Delete Class </th>
+      <th class="text-center"> Active Class </th>
+      <th class="text-center"> Edit Class </th>
+      <th class="text-center"> Delete Class </th>
     </tr>
     <%= render partial: 'scheduled_class_compact', collection: @scheduled_classes, as: :scheduled_class %>
 
