--- a/app/views/class_descriptions/_current_descriptions_table.html.erb
+++ b/app/views/class_descriptions/_current_descriptions_table.html.erb
@@ -5,8 +5,8 @@
       <th> Class Title </th>
       <th> Description </th>
       <th> Fees </th>
-      <th> Edit Class Description </th>
-      <th> Delete Class Description </th>
+      <th class="text-center"> Edit Class Description </th>
+      <th class="text-center"> Delete Class Description </th>
     </tr>
     <%= render partial: 'class_description_compact', collection: @class_descriptions, as: :class_description %>
   </table>
