--- a/app/views/news_updates/_current_news_table.html.erb
+++ b/app/views/news_updates/_current_news_table.html.erb
@@ -4,9 +4,9 @@
       <th> Title </th>
       <th> Description </th>
       <th> Date </th>
-      <th> Current News </th>
-      <th> Edit News Update </th>
-      <th> Delete News Update </th>
+      <th class="text-center"> Current News </th>
+      <th class="text-center"> Edit News Update </th>
+      <th class="text-center"> Delete News Update </th>
     </tr>
     <%= render partial: 'news_update_compact', collection: @news_updates, as: :news_update %>
 
