--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,1 +1,3 @@
-<h1> This is where results will be displayed </h1>
+<body style="background:linear-gradient(0deg, #FFED04 0%, #F47B20 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;">
+  <h1> This is where results will be displayed </h1>
+</body>
