--- a/app/views/results/edit.html.erb
+++ b/app/views/results/edit.html.erb
@@ -19,6 +19,7 @@
       <%=f.label 'Description:', :class => "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%=f.text_area :description, :class => "form-control" %>
+        <p class="help-block">Please enter additional results on separate lines.</p>
       </div>
     </div>
     <div class="form-group">
