--- a/app/views/staff_members/_current_staff_table.html.erb
+++ b/app/views/staff_members/_current_staff_table.html.erb
@@ -3,9 +3,9 @@
     <tr>
       <th> Name </th>
       <th> Bio </th>
-      <th> Current Employee </th>
-      <th> Edit Employee</th>
-      <th> Delete Employee</th>
+      <th class="text-center"> Current Employee </th>
+      <th class="text-center"> Edit Employee</th>
+      <th class="text-center"> Delete Employee</th>
     </tr>
     <%= render partial: 'staff_member_compact', collection: @staff_members, as: :staff_member %>
 
