--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
-    <div class="container">
+    <div id="custom-nav" style="color: #FFFFFF;font-weight: 300;font-size: 16px;" class="container text-center">
       <div id="classes-nav-tab" class="col-md-2 nav-tab">
         <%= link_to "Home/Latest News", root_path %>
       </div>
