--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,29 @@
-<h1> This is the about page </h1> 
+<div class="container">
+  <div id="about-text" class="container text-center">
+    <h1 style="font-size: 36px;"> ABOUT </h1>
+    <p style="font-size: 24.75px;">At Academic Workshop Singapore, we strive for excellence each and every day. The better our curriculum, the stronger our teaching is, the more fluid our communication is the better our students' futures will be.  </p>
+  </div>
+  <div id="about-image" class="col-md-12">
+    <%= image_tag 'about_background' %>
+  </div>
+</div>
+<div class ="container">
+  <div class ="container">
+    <div class="col-md-2">
+      <%= image_tag 'personal' %>
+    </div>
+    <div class="col-md-10">
+      <h4> PERSONAL </h4>
+      <p>We know that no two kids learn in the same exact way, that’s why our teachers take the time to gear lessons to the students in each session for everyone’s success. </p>
+    </div>
+  </div>
+  <div class ="container">
+    <div class="col-md-2">
+      <%= image_tag 'forward_think' %>
+    </div>
+    <div class="col-md-10">
+      <h4> FORWARD-THINKING </h4>
+      <p>How the skills our students learn are applied later in their lives is of utmost importance to us. We teach real-world applications and ensure that they understand the latest tools available to them. </p>
+    </div>
+  </div>
+</div>
