--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,1 +1,15 @@
-<h1> This is the location page </h1>
+<body style="color:#06ACA9;">
+  <div class="container text-center">
+    <h1 style="font-size: 38px;"> LOCATION </h1>
+  </div>
+  <div style="padding-top:3%;" class="container text-center">
+    <div style="padding-top:10%;" class="container col-md-5">
+      <h2 style="font-size: 36px;">10 Windstedt Road<br/>Singapore 227977</h2>
+      <p style="font-size: 30px;padding-top: 4%;">+65 6733 5447</p>
+      <p style="font-size: 25px;padding-top: 4%;">We’d love to hear from you, <u>contact us</u>!</p>
+    </div>
+    <div id="location-map" class="container col-md-7">
+      <%= image_tag 'location' %>
+    </div>
+  </div>
+</body>
