--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,24 @@
-<body style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;">
-  <h1> This is the index page where latest news will be displayed </h1>
+<body style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color:#FFFFFF;">
+  <div style="padding-bottom:3%;" class="container text-center">
+    <h1> LATEST NEWS </h1>
+  </div>
+  <% if @news %>
+    <div class="container">
+      <% @news.each do |story| %>
+        <div style="padding-bottom:3%;" class="container">
+          <div id="news-image" class="col-md-2">
+            <%= image_tag story.image.url(:medium) %>
+          </div>
+          <div class="col-md-10">
+            <% if story.date %>  
+              <h5 style="font-size: 18.5px;"><%=story.title.upcase%>: <%=story.date.strftime('%e %B').upcase%></h5>
+            <% else %>
+              <h5 style="font-size: 18.5px;"><%=story.title.upcase %></h5>
+            <% end %> 
+            <p style="font-size: 16px;"><%=story.description%></p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 </body>
