--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,5 +1,5 @@
 <body style="color:#06ACA9;">
-  <div class="container text-center">
+  <div style="padding-top: 5%;" class="container text-center">
     <h1 style="font-size: 38px;"> LOCATION </h1>
   </div>
   <div style="padding-top:3%;" class="container text-center">
