--- a/app/views/pages/classes.html.erb
+++ b/app/views/pages/classes.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
-  <h1 class="text-center" style="color:#0081C6;"> Descriptions </h1>
+<div style="padding-top: 5%;" class="container">
+  <h1 class="text-center" style="color:#0081C6; padding-bottom: 2%;"> DESCRIPTIONS </h1>
 </div>
 <% @descriptions.each do |classification, classes| %>
   <div class="container" id="<%=classification.gsub(/\s+/, "").gsub(/[!@%&"]/,'')%>">
     <div class="col-md-3">
-      <h2 style="text-align: right;"><%= classification %></h2>
+      <h2 style="text-align: right;"><strong><%= classification %></strong></h2>
     </div>
     <div class="col-md-9">
       <% if classes.length > 1 %>
