--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,13 @@
-<body style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color:#FFFFFF;">
+<div id="index-image" class="container-fluid">
+  <div style="padding-top:3%;">
+    <%=image_tag 'aws_logo_white' %>
+  </div>
+  <div id="index-text" class="container-fluid text-center">
+    <h2 style="font-size: 3em;"> Education today in order to focus on tomorrow. </h2>
+    <p style="font-size: 1.5em;"> Local education on a global scale. </p>
+  </div>
+</div>
+<div style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);color:#FFFFFF;" class="container-fluid">
   <div style="padding-bottom:3%;" class="container text-center">
     <h1> LATEST NEWS </h1>
   </div>
@@ -21,4 +30,4 @@
       <% end %>
     </div>
   <% end %>
-</body>
+</div>
