--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,6 +1,6 @@
 <body style="background:linear-gradient(0deg, #FFED04 0%, #F47B20 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
-  <div class="container">
-    <h1 style="padding-bottom:2%;font-size: 3em;" class="text-center"> Results </h1>
+  <div style="padding-top: 5%;" class="container">
+    <h1 style="padding-bottom:2%;font-size: 3em;" class="text-center"> RESULTS </h1>
   </div>
   <div style="padding-bottom:3%;font-size: 1.2em;" class="container"
     <p>Achievement is about more than grades. At Academic Workshop Singapore, our curriculum is holistic. We teach what children need to know for scholastic performance, but we also demonstrate the real-world application associated with the lesson. We make every effort to teach each child as an individual by taking an active interest in who they are as people. Please take a look below at the success we share with our students.</p>
